[gd_scene load_steps=3 format=2]

[ext_resource path="res://email_message.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="email_elements" type="ItemList" parent="."]
margin_right = 1024.0
margin_bottom = 235.0
items = [ "Best Buy", null, true, "From: shipping-services@bestbvy.com", null, false, "Subject: your package is on the way!", null, true, "Dear Valued Customer,", null, true, "We are writing to inform you that your order has been shipped!", null, true, "Order No. 9000X9237BY746328", null, true, "MacBook Pro 2023 2TB: $3,528.89", null, true, "If you wish cancel your order or update shipping information go to this link:", null, true, "1280X3ioPsh812ASW.com ", null, false ]
max_text_lines = 20

[node name="Button" type="Button" parent="."]
margin_left = 993.0
margin_top = 1.0
margin_right = 1023.0
margin_bottom = 34.0
text = "X"

[node name="Detect" type="Button" parent="."]
margin_left = 530.0
margin_top = 416.0
margin_right = 716.0
margin_bottom = 596.0
theme = SubResource( 1 )
text = "Detect"

[connection signal="item_selected" from="email_elements" to="." method="_on_email_elements_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Detect" to="." method="_on_Detect_toggled"]
